k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener-deployment
  namespace: urlshortener
  labels:
    app: urlshortener-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: urlshortener-app
  template:
    metadata:
      labels:
        app: urlshortener-app
    spec:
      containers:
        - name: urlshortener-container
          image: url-shortener:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      terminationGracePeriodSeconds: 30
